Fix z-index value

--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -64,7 +64,7 @@ body {
 
 #dashboard {
   position: absolute;
-  z-index: 10002px;
+  z-index: 10002;
   left: 210px;
   top: 736px;
   width: 316px;
